--- a/index.css
+++ b/index.css
@@ -18,6 +18,15 @@ main{
 span{
     display: inline-block; /* インラインブロック化 */
 }
+
+canvas {
+    width: 95%;
+    display: block;
+    border: 1px solid #333;
+    background-color: #eee;
+    margin-left: auto;
+    margin-right: auto;
+  }
 /* 段落の最初で字下げする */
 /* p{ */
     /* margin-left: 1rem; */
